--- a/SalesWebMvc/Views/Home/Privacy.cshtml
+++ b/SalesWebMvc/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Politica de Privacidade";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Use esta página para detalhar a política de privacidade do seu site.
+</p>
