--- a/SalesWebMvc/Views/Home/Index.cshtml
+++ b/SalesWebMvc/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem Vindo</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        Aprender sobre
+        <a href="https://docs.microsoft.com/aspnet/core">Criando aplicativos Web com ASP.NET Core</a>.
+    </p>
 </div>
