--- a/SalesWebMvc/Views/Vendedores/Index.cshtml
+++ b/SalesWebMvc/Views/Vendedores/Index.cshtml
@@ -1,9 +1,53 @@
-﻿
+﻿@model IEnumerable<SalesWebMvc.Models.Vendedor>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Vendedores";
 }
 
-<h1>Vendedores</h1>
+<h1>@ViewData["Title"]</h1>
 
-<p>Vendedores paginas index</p>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr class="bg-primary">
+            <th>
+                @Html.DisplayNameFor(model => model.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataDeNascimento)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SalarioBase)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+            {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
 
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.DataDeNascimento)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.SalarioBase)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Cancelar</a>
+            </td>
+        </tr>
+            }
+    </tbody>
+</table>
