--- a/SalesWebMvc/Views/Vendedores/Index.cshtml
+++ b/SalesWebMvc/Views/Vendedores/Index.cshtml
@@ -5,6 +5,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<p>
+    <a asp-action="Create" class="btn btn-default">Criar Novo</a> 
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="bg-primary">
