--- a/SalesWebMvc/Views/Vendedores/Create.cshtml
+++ b/SalesWebMvc/Views/Vendedores/Create.cshtml
@@ -29,8 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Vendedor.DepartamentoId" class="control-label"></label>
-                <select asp-for="Vendedor.DepartamentoId" asp-items="@(new SelectList(Model.Departamentos, "Id", "Nome"))" 
-                        class="form-control"></select>
+                <select asp-for="Vendedor.DepartamentoId" asp-items="@(new SelectList(Model.Departamentos, "Id", "Nome"))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
