--- a/SalesWebMvc/Views/Vendedores/Create.cshtml
+++ b/SalesWebMvc/Views/Vendedores/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SalesWebMvc.Models.VendedorFormViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
 <h1>@ViewData["Title"]</h1>
